# map401

./: .gitattributes  .gitignore  Makefile  README.md  README_CLEAN.md  benchmarks.sh  comparatif.sh  contour.c  contour.h  contour_of.c  cr7.sh  cr71.sh  deux-des-edgar.eps  deux-des-wartapoo.eps  distance_points.c  geom2d.c  geom2d.h  image.c  image.h  liste_points.c  liste_points.h  resultats-tache3-2.txt  resultats-tache6-2.txt  simplification.c  simplification.h  sortie.h  sortie_eps.c  tableau_points.c  tableau_points.h  test_contour.c  test_geom2d.c  test_image.c  types_macros.h
emcc/: .gitignore  Makefile  index.html  main.js  make_image_bundle.sh  map401_w.js  web_utils.c
images/: Bugs_Bunny.pbm-mode3.eps  Charlot.pbm-mode3.eps  Droopy_Wolf.pbm-mode3.eps  FranceRegions.pbm-mode3.eps  JoaquimHock-LesArbres-3-d1.eps  JoaquimHock-LesArbres-3-d2.eps  Pink_Panther.pbm-mode3.eps  animaux.pbm-mode3.eps  caractere2.pbm-mode3.eps  caractere2.pbm.eps  chat.pbm-mode1.eps  chat.pbm-mode2.eps  chat.pbm-mode3.eps  chat.pbm.eps  cheval-3-d1.eps  cheval-3-d2.eps  cheval.pbm-mode3.eps  cible.pbm  cible.pbm-mode3.eps  coq.pbm-mode3.eps  coq.pbm.eps  damier_4_5_1.pbm-mode3.eps  dessin-delius.pbm-mode3.eps  deux-des.pbm-mode3.eps  diagonale.pbm  diagonale.pbm-mode3.eps  diagonale.pbm.eps  elephant-gotlib-3-d1.eps  elephant-gotlib-3-d2.eps  elephant-gotlib.pbm-mode3.eps  elephant.pbm-mode3.eps  elephant.pbm.eps  gai-luron.pbm-mode3.eps  goudyini-A-3-d1.eps  goudyini-A-3-d2.eps  (+33 more)
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: contour_of.rs  geom2d.rs  image.rs  raw.rs
(+7 files in other folders)
